# SimonGame

./: .gitignore  CMakeLists.txt  README.md  SimonGame.cpp  SimonGame.h  form.txt
include/TGUI/: Config.hpp
lib/: tgui-d.lib
